--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -3,8 +3,8 @@
   [routerLink]="[index]"
   routerLinkActive = "active"
   class="list-group-item clearfix"
-  (click)="onSelected()"
 >
+  <!-- (click)="onSelected()" -->
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">{{ recipe.description }}</p>
